--- a/todo.txt
+++ b/todo.txt
@@ -1,25 +1,30 @@
 version: '3.3'
 
 services:
-  db:
+  MediaWiki:
+    container_name: wiki
+    image: mediawiki
+    restart: always
+    ports: 
+      - 8080:80
+    links:
+      - database
+    volumes:
+      - images:/var/www/html/images
+      # ./LocalSettings.php:/var/www/html/LocalSettings.php
+  database:
+    container_name: db
     image: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: DEP@ssw0rd
       MYSQL_DATABASE: mediawiki
       MYSQL_USER: wiki
       MYSQL_PASSWORD: DEP@ssw0rd
+      MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
     volumes:
       - dbvolume:/var/lib/mysql
-
-  wiki:
-    image: mediawiki
-    links:
-      - db
-    ports:
-      - "8080:80"
-    volumes:
-      - ~/LocalSettings.php:/var/www/html/LocalSettings.php
-
 volumes:
   dbvolume:
-//docker-compose -f wiki.yml up -d
+      external: true
+  images:
+
+#docker-compose -f wiki.yml up -d
